# store-catalog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
djangoproject/: manage.py
djangoproject/catalog/: apps.py  views.py
djangoproject/catalog/templates/catalog/: catalog_list.html
djangoproject/django_project/: __init__.py  settings.py  urls.py
store_catalog/: container.py  typesense_migrations.py
store_catalog/adapters/: repository.py  typesense_database.py
store_catalog/domain/: model.py
store_catalog/service_layer/: services.py
tests/: wait_for_typesense.py
tests/catalog_files/: product_categories.jsonl  product_manufactures.jsonl  product_models.jsonl  product_subcategories.jsonl  products.jsonl
